--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,27 @@
   <body>
     <section id='root'>
     </section>
+
+    <!-- <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '777497145743969',
+          cookie     : true,
+          xfbml      : true,
+          version    : 'v2.8'
+        });
+        FB.AppEvents.logPageView();
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script> -->
+
     <script type='text/javascript' src='/js/bundle.js'></script>
   </body>
 </html>
